Fixing main nav img wrapping.

--- a/src/scss/desktop/partials/legacy_overrides/_top-nav.scss
+++ b/src/scss/desktop/partials/legacy_overrides/_top-nav.scss
@@ -1,5 +1,5 @@
-// # Top Nav Overrides
-// Overrides for the old nav bar.
+// # Top Nav
+// These override LEGO to restore legacy styling.
 
 #top {
   .logo {
@@ -14,6 +14,10 @@
 
       &:hover {
         color: #fff;
+      }
+
+      img {
+        display: inline-block;
       }
     }
   }
